# PDD-customer-bot

./: .gitignore  README.md  build_exe copy.py  build_exe.py  config copy.py  config.py  conversations.db  logger.py  main.py  pyproject.toml  requirements.txt  拼多多AI客服.bat  拼多多客服系统.spec
AI/Coze/: coze_agent.py  coze_api.py
PDD/: Set_up_online.py  __init__.py  account_manager.py  app.py  conversation_transfer.py  get_access_token.py  get_token.py  keyword_transfer.py  messages.py  pdd_app.py  pdd_login.py  pdd_message.py  review_manager.py  shouhou_query.py
browser_storage/: 葵花家庭景诚_state.json
config/: account_cookies.json  config-template.json  config.py  config_manager.py  cookies.json  keywords.json
gui/: account_manager_gui.py  keyword_manager_gui.py  monitor_gui.py  settings_gui.py
gui/views/: account_manager_view.py  keyword_manager_view.py  main_window.py  monitor_view.py  setting_view.py  user_view.py
test/: message_test.py  test_get_token.py  test_login.py  test_pdd_app.py  test_setup.py
utils/: cleanup.py  conversation.py  database.py  icon_loader.py  logger.py
